{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "Snake",
            "id": "89030f3b-7568-4437-9a40-f1339bb74f4c",
            "actions": [
                {
                    "name": "Move_Player_1",
                    "type": "PassThrough",
                    "id": "bd10217c-3b60-4068-8f97-fbb9b947ca28",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move_Player_2",
                    "type": "PassThrough",
                    "id": "897d5efd-f839-486b-bc5d-efb3dbddb093",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move_Player_3",
                    "type": "PassThrough",
                    "id": "b49ffbbe-c936-4780-983d-e2bbc152ac21",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move_Player_4",
                    "type": "PassThrough",
                    "id": "7237d5cd-1280-462c-b906-ecf430cba251",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "1a74da74-bcd4-4ca7-a59a-d5e61217ec57",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Player_1",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "7cbda4ee-4a04-4213-ad7f-e6b3ce57a3ec",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Player_1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e1122b5d-7ac6-4092-aaba-d748c3320386",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Player_1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "87b454c5-1544-47fe-92ef-cf9106ff3adc",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Player_1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e4eb4676-188b-4475-a059-b7d0de0681c7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Player_1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrows",
                    "id": "3fd3aec9-084f-4cb1-86b4-93dedf9c22c8",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Player_2",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9b46d7b4-61da-4b7b-a793-872d40be7dfc",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Player_2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "7978a9a1-c10e-444b-aeb8-52aaa6b5c180",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Player_2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b57b0570-8026-4445-8e1c-38caaedb4dd2",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Player_2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "85a7abc7-206e-4294-b425-85ee00667d17",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Player_2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "YGHJ",
                    "id": "824c9cb1-3275-4312-9230-8144d58bfcc9",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Player_3",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "11445a75-2a16-4490-824f-6bbb0959f48d",
                    "path": "<Keyboard>/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Player_3",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "3a464e02-ff25-49fd-bdaa-9a46d6c706d9",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Player_3",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8f73e26b-5e3f-4357-80c4-730844ede76b",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Player_3",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "97cb2d1d-a21a-469e-81aa-a65cf61192b4",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Player_3",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "PL;'",
                    "id": "4e36ad79-e40c-4d0c-9176-3338385a33ed",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Player_4",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "63930fa6-3bdf-45c4-a274-dbb9b4b45f76",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Player_4",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d96d1e64-cbf2-4b1b-b20c-aee7225f3fa9",
                    "path": "<Keyboard>/semicolon",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Player_4",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "2e065d70-704b-4219-9633-d25a57407c39",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Player_4",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "711b38ba-d6a1-44d1-ba53-0d53eef173c4",
                    "path": "<Keyboard>/quote",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Player_4",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}